fix hidden visibility for chrome and firefox

--- a/src/sass/mdb/custom.scss
+++ b/src/sass/mdb/custom.scss
@@ -42,7 +42,7 @@ hr {
 }
 
 p {
-  font-family: Raleway;
+  font-family: Adelle;
   font-style: normal;
   font-size: 1.125rem;
   line-height: 1.5rem;
@@ -217,12 +217,12 @@ p {
 }
 
 #team {
-    background-color: $myPrime;
+    background-color: $myBackground;
     // background-image: url("../img/cover/.jpg");
 }
 
 #partners {
-    background-color: $myBackground;
+    background-color: $myPrime;
     // background-image: url("../img/cover/.jpg");
 }
 
